tried to repair moving STILL NULL