@@ -3,21 +3,26 @@ package MainGame;
 import AtributesOfPlayer.Invertory;
 import AtributesOfPlayer.PickUp;
 import AtributesOfPlayer.SetCharacter;
+import NPCs.Enemy;
 import Rooms.Room;
-
 import java.util.ArrayList;
 import java.util.Scanner;
-
+import Character.*;
 public class Gameos {
     protected String direction;
     private String filepath = "Rooms.txt";
     ArrayList<Room> roomes = new ArrayList<>();
-    Move move;
+    Move move = new Move();
     Scanner scanner = new Scanner(System.in);
+    Postava postava;
+    SetCharacter lobby = new SetCharacter(postava);
+    Enemy enemy;
+    Choosing choose = new Choosing(move ,postava);
 
-Choosing choose = new Choosing();
+
+
     public void loadGame() {
-
+        choose.inicializace();
         GameLoadingData g = new GameLoadingData();
         roomes = g.loadRoomsFromFile(filepath);
         move.rooms = roomes;
@@ -29,21 +34,21 @@ Choosing choose = new Choosing();
         } else {
             System.out.println("No rooms were loaded. Please check the file path and format.");
         }
-        move.setCurrentRoom(move.rooms.get(0));
+        move.setCurrentRoom(move.rooms.getFirst());
 
 
     }
 
     public void setCharacter() {
-        SetCharacter lobby = new SetCharacter();
-        lobby.setNameOfCharacter();
+
+        postava=lobby.setNameOfCharacter();
     }
 
 
     public void gameLoop() {
         loadGame();
 
-        for (int i = 0; i < 10; i++) {
+        for (int i = 0; i < 5; i++) {
             System.out.println("   ");
         }
         System.out.println("Hra byla spravne nactena ze souboru");
@@ -51,7 +56,8 @@ Choosing choose = new Choosing();
 
         System.out.println("GAME HAS STARTED");
         setCharacter();
-       choose.start();
+
+        choose.start();
     }
 
 
